--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
     <header>
         <nav class="cabecalho navbar navbar-expand-lg fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"><img src="src/main/Logo.png" alt="" style="width: 100px;"></a>
+              <a class="navbar-brand" href="index.html"><img src="src/main/Logo.png" alt="" style="width: 100px;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 500px;">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Bazar</a>
+                    <a class="nav-link" href="page/bazar.html">Bazar</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Doações</a>
+                    <a class="nav-link" href="page/doacoes.html">Doações</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Voluntários</a>
+                    <a class="nav-link" href="page/voluntarios.html">Voluntários</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Projetos</a>
+                    <a class="nav-link" href="page/projetos.html">Projetos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sede</a>
+                    <a class="nav-link" href="page/sede.html">Sede</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Educação</a>
+                    <a class="nav-link" href="page/educacao.html">Educação</a>
                   </li>
                 </ul>
               </div>
@@ -61,7 +61,7 @@
                 Operando com recursos limitados provenientes de doações e ações sociais, a associação fornece cuidados veterinários regulares
                 e emprega um funcionário remunerado para assistência diária. O fundador, Sr. Virgílio Martins, residente no local, garante cuidado
                 constante aos animais, oferecendo suporte 24 horas por dia, 7 dias por semana.<br>*Não divulgamos nosso endereço pois não damos conta da demanda de abandonos e resgates.*</p>
-              <a href="outra-pagina.html" class="btn btn-primary botao-padrao">Saiba Mais</a>
+              <a href="page/sobre.html" class="btn btn-primary botao-padrao">Saiba Mais</a>
           </div>
       </div>
     </main>
@@ -75,13 +75,13 @@
       </div>
       <div class="row justify-content-center">
           <div class="col-md-2">
-              <div class="card dog-card" onclick="location.href='pagina-do-cachorro1.html'">
+              <div class="card dog-card" onclick="location.href='page/tatau.html'">
                   <img src="src/home/tatau.png" alt="Nome do Cachorro 1">
                   <h5 class="card-title">Tatau</h5>
               </div>
           </div>
           <div class="col-md-2">
-              <div class="card dog-card" onclick="location.href='pagina-do-cachorro2.html'">
+              <div class="card dog-card" onclick="location.href='page/thor.html'">
                   <img src="src/home/thor.jpeg" alt="Nome do Cachorro 2">
                   <h5 class="card-title">Thor</h5>
               </div>
@@ -114,7 +114,7 @@
           <div class="col-md-6">
               <h1 class="mb-3 fs-1 fw-bold">Adoção e apadrinhamento</h1>
               <p class="mb-4">A Associação para Amigos dos Animais de Ribeirão Preto está promovendo adoções de cães encantadores em busca de lares amorosos. Requisitos incluem ser maior de 21 anos e residir na região, além de apresentar um ambiente preparado com fotos e vídeos. Documentação pessoal e equipamentos básicos são necessários, enfatizando o compromisso e responsabilidade dos adotantes. Essa iniciativa destaca que adotar é um ato de amor, oferecendo aos peludos a chance de encontrar famílias dedicadas.</p>
-              <a href="outra-pagina.html" class="btn btn-primary botao-padrao">Quero adotar</a>
+              <a href="https://www.instagram.com/amigosdosanimaisribeiraopreto/" target="_blank" class="btn btn-primary botao-padrao">Quero adotar</a>
           </div>
           <div class="col-md-6 img-aaarp">
             <img src="src/home/adocaoeapadrinhamento.png" class="img-fluid" alt="senhor virgílio fazendo carinho nos cachorros resgatados" style="width: 350px;">
@@ -163,7 +163,7 @@
           <div class="col-md-6">
               <h1 class="mb-3 fs-1 fw-bold">Construção do abrigo</h1>
               <p class="mb-4">A Associação para Amigos dos Animais de Ribeirão Preto conquistou o direito de uso de um terreno para a construção de sua nova sede, conforme aprovado pela prefeitura em 2021. As etapas iniciais incluíram topografia, preparação do terreno e planejamento da planta, realizadas com ajuda de voluntários e financiadas por doações. As fases seguintes envolveram a construção da primeira fileira de canis, muro, área de cimentado, banheiro para dejetos e tanque para banhos. As próximas etapas planejadas incluem a construção de um galpão com instalações essenciais e a finalização da segunda e terceira fileiras de canis. O projeto representa um importante avanço na capacidade da associação de atender e cuidar dos animais necessitados.</p>
-              <a href="outra-pagina.html" class="btn btn-primary botao-padrao">Quero conhecer</a>
+              <a href="page/sede.html" class="btn btn-primary botao-padrao">Quero conhecer</a>
           </div>
       </div>
     </div>
@@ -178,7 +178,7 @@
             <div class="col-md-6">
                 <h1 class="mb-3 fs-1 fw-bold font-color-primary">Voluntários</h1>
                 <p class="mb-4">Ser voluntário é dedicar-se à comunidade sem buscar recompensa financeira, mas sim o bem-estar coletivo. Requer empatia, compaixão e ação para aliviar o sofrimento dos animais. Buscamos voluntários comprometidos e disponíveis para fortalecer nossa causa.</p>
-                <a href="outra-pagina.html" class="btn btn-primary botao-secundario">Sobre nós</a>
+                <a href="page/voluntarios.html" class="btn btn-primary botao-secundario">Sobre nós</a>
             </div>
         </div>
       </div>
