--- a/template.html
+++ b/template.html
@@ -24,6 +24,9 @@
               <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 500px;">
                   <li class="nav-item">
+                    <a class="nav-link" href="sobre.html">Sobre</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="bazar.html">Bazar</a>
                   </li>
                   <li class="nav-item">
@@ -43,7 +46,8 @@
                   </li>
                 </ul>
               </div>
-              <span class="centralizador" style="width: 100px;"></span>
+              <span style="width: 50px;"></span>
+              <a class="navbar-brand" href="https://www.instagram.com/amigosdosanimaisribeiraopreto/" target="_blank"><img src="src/main/instagram.png" alt="" style="width: 50px;"></a>
             </div>
           </nav>
     </header>
