--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
           </div>
           <div class="col-md-2">
               <div class="card dog-card" onclick="location.href='page/thor.html'">
-                  <img src="src/home/thor.jpeg" alt="Nome do Cachorro 2">
+                  <img src="src/home/thor.png" alt="Nome do Cachorro 2">
                   <h5 class="card-title">Thor</h5>
               </div>
           </div>
           <div class="col-md-2">
-              <div class="card dog-card" onclick="location.href='pagina-do-cachorro3.html'">
+              <div class="card dog-card" onclick="location.href='page/mariaregina.html'">
                   <img src="src/home/mariaregina.jpeg" alt="Nome do Cachorro 3">
                   <h5 class="card-title">Maria Regina</h5>
               </div>
           </div>
           <div class="col-md-2">
-              <div class="card dog-card" onclick="location.href='pagina-do-cachorro4.html'">
+              <div class="card dog-card" onclick="location.href='page/andre.html'">
                   <img src="src/home/andre.jpeg" alt="Nome do Cachorro 4">
                   <h5 class="card-title">Andre</h5>
               </div>
           </div>
           <div class="col-md-2">
-              <div class="card dog-card" onclick="location.href='pagina-do-cachorro5.html'">
+              <div class="card dog-card" onclick="location.href='page/catarina.html'">
                   <img src="src/home/catarina.jpeg" alt="Nome do Cachorro 5">
                   <h5 class="card-title">Catarina</h5>
               </div>
