--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="cabecalho navbar navbar-expand-lg fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="src/main/Logo.png" alt="" style="width: 100px;"></a>
+        <a class="navbar-brand" href="index.html"><img src="src/main/Logo.png" alt="Logo da associacao" style="width: 100px;"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
           aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,7 @@
         </div>
         <span style="width: 50px;"></span>
         <a class="navbar-brand" href="https://www.instagram.com/amigosdosanimaisribeiraopreto/" target="_blank"><img
-            src="src/main/instagram.png" alt="" style="width: 50px;"></a>
+            src="src/main/instagram.png" alt="Logo instagram" style="width: 50px;"></a>
       </div>
     </nav>
   </header>
@@ -90,31 +90,31 @@
     <div class="row justify-content-center">
       <div class="col-md-2">
         <div class="card dog-card" onclick="location.href='page/tatau.html'">
-          <img src="src/home/tatau.png" alt="Nome do Cachorro 1">
+          <img src="src/home/tatau.png" alt="Foto do Tatau">
           <h5 class="card-title">Tatau</h5>
         </div>
       </div>
       <div class="col-md-2">
         <div class="card dog-card" onclick="location.href='page/thor.html'">
-          <img src="src/home/thor.png" alt="Nome do Cachorro 2">
+          <img src="src/home/thor.png" alt="Foto do Thor">
           <h5 class="card-title">Thor</h5>
         </div>
       </div>
       <div class="col-md-2">
         <div class="card dog-card" onclick="location.href='page/mariaregina.html'">
-          <img src="src/home/mariaregina.jpeg" alt="Nome do Cachorro 3">
+          <img src="src/home/mariaregina.jpeg" alt="Foto da Maria Regina">
           <h5 class="card-title">Maria Regina</h5>
         </div>
       </div>
       <div class="col-md-2">
         <div class="card dog-card" onclick="location.href='page/andre.html'">
-          <img src="src/home/andre.jpeg" alt="Nome do Cachorro 4">
+          <img src="src/home/andre.jpeg" alt="Foto do Andre">
           <h5 class="card-title">Andre</h5>
         </div>
       </div>
       <div class="col-md-2">
         <div class="card dog-card" onclick="location.href='page/catarina.html'">
-          <img src="src/home/catarina.jpeg" alt="Nome do Cachorro 5">
+          <img src="src/home/catarina.jpeg" alt="Foto da Catarina">
           <h5 class="card-title">Catarina</h5>
         </div>
       </div>
@@ -137,7 +137,7 @@
       </div>
       <div class="col-md-6 img-aaarp">
         <img src="src/home/adocaoeapadrinhamento.png" class="img-fluid"
-          alt="senhor virgílio fazendo carinho nos cachorros resgatados" style="width: 350px;">
+          alt="Cachorro para adocao" style="width: 350px;">
       </div>
     </div>
   </div>
@@ -178,8 +178,8 @@
   <div class="container my-5">
     <div class="row  align-items-center">
       <div class="col-md-6 img-aaarp">
-        <img src="src/home/fotoabrigo.png" class="img-fluid"
-          alt="senhor virgílio fazendo carinho nos cachorros resgatados" style="width: 350px;">
+        <img src="src/home/fotoabrigo.jpeg" class="img-fluid borda-arredondada"
+          alt="Foto do abrigo que esta sendo construido" style="width: 350px;">
       </div>
       <div class="col-md-6">
         <h1 class="mb-3 fs-1 fw-bold">Construção do abrigo</h1>
@@ -201,7 +201,7 @@
       <div class="row  align-items-center">
         <div class="col-md-6 img-aaarp">
           <img src="src/home/voluntarios.jpg" class="img-fluid"
-            alt="senhor virgílio fazendo carinho nos cachorros resgatados" style="width: 500px; border-radius: 15px;">
+            alt="Grupo de voluntarios" style="width: 500px; border-radius: 15px;">
         </div>
         <div class="col-md-6">
           <h1 class="mb-3 fs-1 fw-bold font-color-primary">Voluntários</h1>
